--- a/AndroidClient/app/src/main/res/values/strings.xml
+++ b/AndroidClient/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+
+    <string name="login_status">Вы не вошли в систему</string>
 </resources>
