--- a/AndroidClient/app/src/main/res/values/strings.xml
+++ b/AndroidClient/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="invalid_username">Введено некорректное имя</string>
     <string name="invalid_password">Пароль должен содержать более 5 символов</string>
     <string name="title_activity_login">Вход в систему</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
